--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,44 @@
-server {
-    server_name oorga.co;
-    listen 443 ssl spdy;
-
-    # The site is actually hosted on github pages.  Using this proxy location
-    # allows us to secure the connection with our own SSL keys, instead of the
-    # generic github.io SSL keys.
-
-   location / {
-            root   html;
-            index  index.html index.htm;
-        }
-		
-		location /api/googleapis {
-			proxy_pass https://www.googleapis.com;
-		}
+ worker_processes  1;
     
+    events {
+        worker_connections  1024;
+    }
+    
+    http {
+        include            mime.types;
+        default_type       application/octet-stream;
+        sendfile           on;
+        keepalive_timeout  65;
+
+        map $http_upgrade $connection_upgrade {
+            default upgrade;
+            '' close;
+        }
+  
+        server {
+            listen       80;
+            server_name  localhost;
+            
+            location / {
+                proxy_pass http://octoprint; # NO trailing slash here!
+                proxy_set_header Host $http_host;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection "upgrade";
+                proxy_set_header X-Real-IP $remote_addr;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Scheme $scheme;
+
+                client_max_body_size 0;    
+            }
+
+            location /webcam/ {
+                proxy_pass http://mjpg-streamer/;
+            }
+
+            # redirect server error pages to the static page /50x.html
+            error_page   500 502 503 504  /50x.html;
+            location = /50x.html {
+                root   html;
+            }
+        }
     }
