--- a/nginx.conf
+++ b/nginx.conf
@@ -32,7 +32,7 @@
             }
 
             location /webcam/ {
-                proxy_pass http://mjpg-streamer/;
+                proxy_pass https://google.com/;
             }
 
             # redirect server error pages to the static page /50x.html
