--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
- worker_processes  1;
+worker_processes  1;
     
     events {
         worker_connections  1024;
@@ -15,6 +15,14 @@
             '' close;
         }
   
+        upstream "octoprint" {
+            server 127.0.0.1:5000;
+        }
+    
+        upstream "mjpg-streamer" {
+            server 127.0.0.1:8080;
+        }
+    
         server {
             listen       80;
             server_name  localhost;
@@ -32,7 +40,7 @@
             }
 
             location /webcam/ {
-                proxy_pass https://google.com/;
+                proxy_pass http://mjpg-streamer/;
             }
 
             # redirect server error pages to the static page /50x.html
