--- a/nginx.conf
+++ b/nginx.conf
@@ -39,8 +39,8 @@ worker_processes  1;
                 client_max_body_size 0;    
             }
 
-            location /webcam/ {
-                proxy_pass http://mjpg-streamer/;
+            location /api/googleapis {
+                proxy_pass https://www.googleapis.com;
             }
 
             # redirect server error pages to the static page /50x.html
